--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js --mode development",
     "start:qa": "cross-env NODE_ENV=qa webpack serve --config ./webpack/webpack.dev.js --mode production",
     "start": "cross-env NODE_ENV=prod webpack serve --config ./webpack/webpack.dev.js --mode production",
-    "build": "webpack --config ./webpack/webpack.prod.js --mode production"
+    "build": "webpack --config ./webpack/webpack.prod.js --mode production",
+    "dummyapi": "json-server --watch db.json"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
