--- a/package.json
+++ b/package.json
@@ -6,27 +6,36 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js --mode development",
     "start:qa": "cross-env NODE_ENV=qa webpack serve --config ./webpack/webpack.dev.js --mode production",
-    "start": "cross-env NODE_ENV=prod webpack serve --config ./webpack/webpack.dev.js --mode production",
-    "build": "webpack --config ./webpack/webpack.prod.js --mode production",
-    "dummyapi": "json-server --watch db.json"
+    "build": "cross-env NODE_ENV=prod webpack --config ./webpack/webpack.prod.js --mode production",
+    "dummyapi": "json-server --watch db.json",
+    "webpack-dev-server": "webpack-dev-server --config ./webpack/webpack.dev.js --mode development",
+    "serve:prod": "npm run build && serve -s dist",
+    "svg": "svgr -d src/components/icons src/components/icons/svgs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
+    "@reach/router": "^1.3.4",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@svgr/cli": "^8.1.0",
+    "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
     "dotenv": "^16.4.1",
     "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "serve": "^14.2.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
