--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development webpack serve --config ./webpack/webpack.dev.js --mode development",
+    "start:dev": "cross-env NODE_ENV=dev webpack serve --config ./webpack/webpack.dev.js --mode development",
     "start:qa": "cross-env NODE_ENV=qa webpack serve --config ./webpack/webpack.dev.js --mode production",
-    "build": "cross-env NODE_ENV=prod webpack --config ./webpack/webpack.prod.js --mode production",
-    "dummyapi": "json-server --watch db.json",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.production.js --mode production",
+    "dummyapi": "json-server --watch db.json --port 8081",
     "webpack-dev-server": "webpack-dev-server --config ./webpack/webpack.dev.js --mode development",
-    "serve:prod": "npm run build && serve -s dist",
+    "serve": "npm run build && serve -s dist",
     "svg": "svgr -d src/components/icons src/components/icons/svgs"
   },
   "keywords": [],
@@ -20,7 +20,10 @@
     "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-window": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -29,6 +32,7 @@
     "@babel/preset-react": "^7.23.3",
     "@svgr/cli": "^8.1.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.1",
