--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
     "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
     "workbox-window": "^7.0.0"
   },
   "devDependencies": {
